Configured eureka server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=discovery-server
+
+spring.profiles.active= local
+
+#because we do not want eureka to register with eureka, so we set the below to false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
