Renaming the application in application.properties

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,3 +3,6 @@ server.port: 8761
 #To read configurations from config server
 spring.config.import=optional:configserver:http://localhost:8888
 
+#because we do not want eureka to register with eureka, so we set the below to false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
