Externalised configurations to the Config Server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=zDiscovery
 
-spring.profiles.active= local
+#To read configurations from config server
+spring.config.import=optional:configserver:http://localhost:8888
 
-logging.file.path=./logs
-logging.file.name=./logs/zDiscoverylog.log
+spring.profiles.active=local
